2005-01-21  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gdi.xml, driver/hl1250.xml, driver/pcl3.xml: Added
	  instructions and links to add these drivers to GhostScript 8.x.

	* driver/pcl3.xml: Updated driver home page URL.

2005-01-15  Chris Lawrence  <lawrencc@debian.org>

	* db/source/printer/Brother-HL-1430.xml,
	  db/source/printer/Brother-HL-1440.xml,
	  db/source/printer/Canon-BJC-250.xml,
	  db/source/printer/Canon-S100.xml,
	  db/source/printer/Epson-Stylus_C60.xml,
	  db/source/printer/HP-DeskJet_1220C.xml,
	  db/source/printer/HP-DeskJet_3320.xml,
	  db/source/printer/HP-DeskJet_3550.xml,
	  db/source/printer/HP-DeskJet_5652.xml,
	  db/source/printer/HP-DeskJet_940C.xml,
	  db/source/printer/HP-LaserJet_1012.xml,
	  db/source/printer/Lexmark-E210.xml,
	  db/source/printer/Lexmark-Z22.xml,
	  db/source/printer/Lexmark-Z32.xml: Added/updated autodetect
	  information.

	* db/source/printer/Brother-HL-5140.xml,
	  db/source/printer/Brother-HL-5150D.xml,
	  db/source/printer/Brother-HL-5170DN.xml: Added entries for
	  Brother HL-51x0 series.

	* db/source/printer/Epson-Stylus_C86.xml: Add entry for Epson
	  Stylus C86, similar to C84 (Debian bug #289256)

2005-01-11  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1320.xml: Fixed link to
	  manufacturer-supplied PPD file.

2005-01-11  Cory Meisch <cory.meisch@hp.com>

	* added LaserJet 4345 mfp

2005-01-10  Cory Meisch <cory.meisch@hp.com>

	* added LaserJet 3015, 3020, 3030

2005-01-10  Tim Waugh <twaugh@redhat.com>

	* printer/Epson-Stylus_Photo_R200.xml: Added IEEE 1284
	  information (RH bug #144631).

2005-01-07  Tim Waugh <twaugh@redhat.com>

	* printer/Okidata-Okipage_6ex.xml: Corrected IEEE 1284
	  information (RH bug #143964).

	* printer/Epson-Stylus_Photo_R300.xml: Added IEEE 1284
	  information (RH bug #143939).

2005-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_4L.xml, printer/Kyocera-FS-6500.xml,