@@ -24,7 +24,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <commandset>MLC,PCL,PML</commandset>
+      <description>Hewlett-Packard DeskJet 880C</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>DESKJET 880C</model>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
