@@ -1,3 +1,8 @@
+2005-01-24  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-DeskJet_880C.xml: Added IEEE 1284 information (RH
+	  bug #145926).
+
 2005-01-21  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/gdi.xml, driver/hl1250.xml, driver/pcl3.xml: Added
